# napcat-adapter

./: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  run.bat  update.bat
.cursor/rules/: napcat-adapter-skills.mdc
src/: __main__.py  log.py  settings.py
src/core/: __init__.py  bot.py  models.py  protocol_adapt.py  test.py
